# mithrilforge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.json  docker-compose.yml  justfile  sealed-secrets.yaml
.github/: CODEOWNERS
.github/workflows/: deploy.yml
.helm/: Chart.yaml  values.yaml
.helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
.sqlx/: query-22b3573b68c09c5812bbe6052e33a8a53759dab9e86c35ef9c9cc981597924ad.json  query-271792df46e1dbd1e1739c84ae098c9c4d3d180c4306e09a89338fa0576575d2.json  query-2b8eaedfad005c86b4dbe055420a585081174fa798289e0ad51d39d34369128d.json  query-526405984c955f2d548acb2269923ba7a889cd25943ef0fc4a183207e1842e9b.json  query-f8e73f86e70503bbef924e8fad7ede8c8128546898d94d23a2e0a8851ab904bc.json
backend/: main.rs
backend/lib/: config.rs  outbound.rs
backend/lib/domain/website/: models.rs  ports.rs  service.rs
backend/lib/domain/website/models/: website.rs
backend/lib/inbound/: http.rs
backend/lib/inbound/http/: extractors.rs  handlers.rs
backend/lib/inbound/http/handlers/: create_website.rs  get_websites.rs  websocket.rs
backend/lib/outbound/: ai.rs  event_publisher.rs  postgres.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Websites.tsx  index.css  index.tsx
frontend/src/icons/: Send.tsx
migrations/: 20250718121559_initial.sql
